# sheetydrums

./: .gitignore  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md
backend/: README.md  pyproject.toml
backend/scripts/: retranscribe_project.py
backend/scripts/eval/: README.md  compare_treble_charger_brand_new_low.py
backend/scripts/eval/baselines/: ac-dc-back-in-black.v2.events.json  treble-charger-brand-new-low.v1.events.json  treble-charger-brand-new-low.v2.events.json
backend/scripts/eval/reference_tabs/: treble-charger-brand-new-low.txt
backend/src/sheetydrums/: __init__.py  audio.py  cli.py  config.py  debug.py  device.py  factory.py  fetch.py  interfaces.py  phase_correct.py  pipeline.py  server.py  store.py  validate.py
backend/src/sheetydrums/stages/: __init__.py  beats.py  drumsep.py  expander.py  expansion.py  quantize.py  separation.py  substem.py  transcription.py
backend/tests/: conftest.py  test_expander.py  test_pipeline.py  test_quantize.py  test_server.py  test_smoke.py  test_store.py
backend/tests/fixtures/: NOTICE.md
docs/: mir-primer.md  v2-backlog.md
docs/research/: 2026-05-pipeline-survey.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: events.json
frontend/src/: api.ts  audioPlayer.ts  edit.ts  main.js  main.ts  playback.ts  poo.ts  render.js  render.ts  style.css  sync.ts
schema/: events.schema.json  project.schema.json
