[project]
name = "sheetydrums"
version = "0.1.0"
description = "Audio-to-drum-sheet-music backend pipeline"
authors = [
    { name = "Brad Rogan", email = "brad.rogan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.26.0",
    "typer>=0.25.1",
]

[project.scripts]
sheetydrums = "sheetydrums:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
