[project]
name = "sheetydrums"
version = "0.1.0"
description = "Audio-to-drum-sheet-music backend pipeline"
authors = [
    { name = "Brad Rogan", email = "brad.rogan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.26.0",
    "numpy>=2.4.6",
    "typer>=0.25.1",
]

[project.scripts]
sheetydrums = "sheetydrums:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
# typer's Argument/Option return Any internally; trying to type them strictly
# is more noise than signal. Same for some jsonschema/numpy edges. Re-evaluate
# if Any starts leaking into our own code surfaces.
reportUnknownMemberType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
