[project]
name = "sheetydrums"
version = "0.1.0"
description = "Audio-to-drum-sheet-music backend pipeline"
authors = [
    { name = "Brad Rogan", email = "brad.rogan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "adtof-pytorch",
    "beat-this>=1.1.0",
    "demucs>=4.0.1",
    "jsonschema>=4.26.0",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "typer>=0.25.1",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
sheetydrums = "sheetydrums:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
# typer / soundfile / scipy / demucs / torch all have weak type stubs that
# leak Unknown/Any across our function boundaries. Disabling the related
# rules keeps strict mode on for code we control while not chasing noise
# from third-party stub gaps. Re-evaluate if Any starts polluting our own
# returns or attribute access patterns.
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "slow: integration tests that load real models / fixtures (run with --run-slow)",
]

[tool.uv.sources]
adtof-pytorch = { git = "https://github.com/xavriley/ADTOF-pytorch.git" }
